--- a/style.css
+++ b/style.css
@@ -155,3 +155,180 @@
         color: #737373;
         margin: 0px;
       }
+      .cardsCls{
+        margin: 100px 0px;
+        /* background-color: #96BB7C; */
+        height: 278px;
+        overflow: auto;   /*this is very important otherwise the child div top margin will not work. */
+        display: flex;
+        justify-content: space-between;
+      }
+      .card{
+        width: 180px;
+        height: 238px;
+        padding: 10px 30px;
+        box-shadow: 1px 6px 6px 0px lightgray;
+      }
+      .card-img-top{
+        width: 72px;
+        margin-bottom: 15px;
+      }
+      .card-title{
+        width: 140px;
+        height: 20px;
+        margin: 0px;
+      }
+      .rectangle{
+        height:2px;
+        width: 50px;
+        background-color: #E74040;
+        margin: 10px 0px;
+      }
+      .card-text{
+        width: 132px;
+        height:60px;
+        margin: 0px;
+      }
+      .thirdCardCls{
+        background-color: #96BB7C;
+        margin: 0px!important;
+        padding: 10px 30px;
+        box-shadow: 0px 0px 0px 0px lightgray;
+        color: #FFFFFF;
+      }
+      .thirdBody{
+        height: 680px;
+        /* background-color: #96BB7C; */
+        overflow: auto;
+      }
+      .thirdBodyInner{
+        margin: 0px 180px;
+        height: 680px;
+        overflow: auto;
+        /* background-color: #E74040; */
+      }
+      .thirdBodyInnerTwo{
+        margin: 150px 0px;
+        height: 380px;
+        display:flex;
+        /* background-color: aqua; */
+      }
+      .GqLeft{
+        width: 50%;
+      }
+      .GqRight{
+        width: 50%;
+        overflow: auto;
+      }
+      .GqLeft img{
+        width: 486px;
+        height:380px ;    
+      }
+      .GqRightInner{
+        width: 360px;
+        /* height: 290px; */
+        height: auto;
+        margin: 47px 0px 47px 126px;
+        /* background-color: bisque; */
+      }
+      .rectangleGetQuality{
+        height:7px;
+        width: 94px;
+        background-color: #E74040;
+        margin: 0px;
+      }
+      .getQuality{
+        width: 250px;
+        height: 90px;
+        font-size: x-large;
+        margin: 30px 0px;
+      }
+      GqRightInner p{
+        margin-bottom: 30px;
+        color: #737373;
+      }
+      .learnMoreThird{
+        color: #96BB7C;
+        height: 24px;
+        font-size: 20px;
+        font-weight: bolder;
+      }
+      .GqLeft iframe{
+        width: 486px;
+        height:380px ;  
+      }
+      .fifthBody{
+        /* height: 1050px; */
+        /* overflow: auto; */
+        /* background-color: #E74040; */
+      }
+      .fifthBodyInner{
+        /* height:1100px; */
+        margin: 0px 150px 80px 150px;
+        overflow: auto;
+      }
+      .fifthBodyInnerTwo{
+        margin: 90px 0px;
+        overflow: auto;
+      }
+      .ourPopularCls h2{
+        margin: 0px;;
+      }
+      .fifthBodyInnerThree{
+        /* margin-bottom: 100px; */
+        display: flex;
+        justify-content: space-evenly;
+      }
+      .mainCards{
+        width: 238px;
+        height: auto;
+      }
+      .mainCardTop img{
+        height: 281px;
+      }
+      .mainCardBotom{
+        width: 232px;
+        height: auto;
+      }
+      .mainCardBotomInner{
+        margin: 25px 25px 0px 25px;
+      }
+      .trainingCls{
+        margin-bottom: 10px;
+        color: #96BB7C;
+        font-size: 18px;
+      }
+      .starCls{  
+        background-color: #2D4059;
+        border-radius: 30px;
+        color: #FFFFFF;
+        padding: 5px;
+      }
+      .mainCardBotomInner h5{
+        margin: 0px 0px 10px 0px;
+        font-size: 19px;
+      }
+      .mainCardBotomInner p{
+        margin: 0px 0px 10px 0px;
+        font-size: 18px;
+      }
+      .salesCls{
+        height: 30px;
+      }
+      .salesCls img{
+        height: 30px;
+        margin: 0px 0px 10px 0px;
+      }
+      .priceCls{
+        height: 34px;
+        margin: 0px 0px 10px 0px;
+      }
+      .LmoreCls{
+        width: 141px;
+        /* height: 44px; */
+        height: auto;
+      }
+      .sixthBody{
+        height: 600px;
+        background-color: aqua;
+      }
